# lumi-android-core

./: BIP32-README.md  BIP39-README.md  BTC-README.md  EOS-README.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lumiwallet/lumi_core/: App.kt
app/src/main/java/com/lumiwallet/lumi_core/di/: AppComponent.kt  AppContextModule.kt  AppModule.kt
app/src/main/res/anim/: screen_right_in.xml  screen_right_out.xml
app/src/main/res/drawable/: black_button_background.xml  bottom_sheet_rounded_drawable.xml  facebook_icon.xml  ic_back.xml  ic_icon_open.xml  ic_launcher_foreground.xml  ic_share.xml  ic_toolbar_logo.xml  medium_icon.xml  reddit_icon.xml  telegram_icon.xml  twitter_icon.xml  wallet_logo_icon.xml  white_button_background.xml
app/src/main/res/layout/: activity_main.xml  fragment_about.xml  fragment_btc_signing.xml  fragment_derivation.xml  fragment_eos_signing.xml  fragment_generate_random.xml  fragment_main.xml  fragment_transaction_add_input.xml  fragment_transaction_add_output.xml  item_view_key.xml  item_view_transaction_header.xml  item_view_transaction_input.xml  item_view_transaction_output.xml  view_delete_button.xml  view_derivation_details.xml  view_eos_transaction_signed.xml  view_import_mnemonic.xml  view_input.xml  view_output.xml  view_select_mnemonic_words.xml  view_transaction_signed.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  native-lib.cpp  sha512.c  sha512.h  sha512_hmac.c  sha512_hmac.h  sign.h
core/src/main/cpp/ed25519/: ed25519-hash.h  ed25519.c  ed25519.h
gradle/wrapper/: gradle-wrapper.properties
(+282 files in other folders)
